@startuml
class Formicarium{

}

interface IEnvironment{
    +update()
    +add_robot(robot:IRobot)
    +add_obstacle(pose_dim:(float,float,float,float))
    +get_robot_names() -> list
}

interface ICollider{
    +check_collision_lidar(x: float, y: float) -> bool
    +check_collision_robot(x: float, y: float) -> bool
}

class Environment{
    +Environment(width: float, height: float)
}

interface IRobot{
    +update(map:Surface)
    +cmd_vel_callback(msg:Twist)
    +move()
    +stop()
    +publish_odom()
    +publish_pose()
}

class DiffRobot{
    +DiffRobot(name:str, wheel_radius: float, wheel_base: float, start_x: float, start_y: float,
                 lidar: ILidar, img: image, collider:ICollider, node:Node)
}

interface ILidar{
    +scan(map:Surface,stamp:Time)
    +set_position(x: float, y: float)
}

class Lidar{
    +Lidar( collider:ICollider, range: float, xPos: float, yPos: float)
}

IEnvironment <|-- Environment
ICollider <|-left- Environment
Formicarium *-left- IEnvironment
Environment o-right- IRobot 

Formicarium ..> Lidar
Formicarium ..> DiffRobot

IRobot <|-right- DiffRobot
ILidar <|-- Lidar
DiffRobot o-- ILidar
Lidar o-left- ICollider

Formicarium *-- DiffRobot

@enduml